--- a/profile_card_file/css/style.css
+++ b/profile_card_file/css/style.css
@@ -24,9 +24,9 @@ body{
 }
 .pro-label {
     position: absolute;
-    top: 10px; /* Adjust the position as needed */
-    left: 10px; /* Adjust the position as needed */
-    background-color: #757575; /* Adjust the color as needed */
+    top: 10px; 
+    left: 10px; 
+    background-color: #757575; 
     color: white;
     padding: 5px 10px;
     border-radius: 5px;
